# payway

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  fx.rs  idempotency.rs  lib.rs  main.rs  routes.rs  state.rs
backend/src/domain/: payments.rs
backend/src/middleware/: request_id.rs
backend/src/routes/: health.rs  payments.rs
backend/tests/: payments_create.rs
learn/: payments-create.md  rust-project-layout.md  schema-design.md
learn/concepts/: double-spend.md  error-handling.md  idempotency.md
migrations/: 0001_initial_schema.sql  0002_seed.sql
