[package]
name = "payway-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Web framework + HTTP middleware
axum       = "0.7"
tower      = "0.5"
tower-http = { version = "0.6", features = ["request-id", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "macros",
    "migrate",
] }

# JSON in/out
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Money + IDs + time
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }

# Error handling
thiserror = "2"
anyhow    = "1"

# Structured logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# .env loading (no-op when real env vars are set)
dotenvy = "0.15"

# Hashing (request_hash for idempotency, HMAC for webhooks in 2c)
sha2 = "0.10"
hex  = "0.4"

[dev-dependencies]
# Decimal literal macro — `dec!(0.000625)` instead of `Decimal::from_str("...")`
rust_decimal_macros = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
